--- a/app/src/main/res/layout/activity_bridges.xml
+++ b/app/src/main/res/layout/activity_bridges.xml
@@ -5,11 +5,23 @@
     android:background="#efeded"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
     <include
         android:id="@+id/tool_bar"
         layout="@layout/toolbar">
 
     </include>
+
+    </LinearLayout>
 
 
     <ScrollView
@@ -313,6 +325,7 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
+    </LinearLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -322,4 +335,6 @@
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="25dp"
         android:src="@drawable/ic_add_black_24dp" />
+
+
 </RelativeLayout>
