--- a/app/src/main/res/layout/activity_new_bridge_form2.xml
+++ b/app/src/main/res/layout/activity_new_bridge_form2.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    android:id="@+id/container"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#efeded"
     tools:context=".NewActivities.NewBridgeForm">
 
+    <include
+        android:id="@+id/tool_bar"
+        layout="@layout/toolbar">
+
+    </include>
+
+    <FrameLayout
+    android:id="@+id/container" android:layout_below="@+id/tool_bar"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 </FrameLayout>
+
+    </RelativeLayout>
