Modifications completed except photo fetching

--- a/app/src/main/res/layout/popup_to_show_connection_message.xml
+++ b/app/src/main/res/layout/popup_to_show_connection_message.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/popup_connec_warning_w"
-    android:layout_height="@dimen/popup_connec_warning_h"
+    android:layout_width="280dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/rounded_corner_for_layout_bg"
     android:layout_gravity="center">
 
@@ -31,6 +31,7 @@
                 android:layout_height="40dp"
                 android:background="@drawable/rounded_corner_for_bttn"
                 android:text="Okay"
+                android:layout_marginBottom="20dp"
                 android:textColor="@color/white"
                 android:textAllCaps="false"
                 android:textSize="19sp"
